--- a/.github/workflows/buildQt.yml
+++ b/.github/workflows/buildQt.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run a multi-line script
       run: |
-        echo "Installing qmake...",
-        apt-get install qt5-qmake -y,
-        echo "Running qmake...",
-        qmake ODA-IDE2.pro,
-        echo "Qmake finished...",
-        echo "Building project",
-        make,
+        echo "Installing qmake..."
+        apt-get install qt5-qmake -y
+        echo "Running qmake..."
+        qmake ODA-IDE2.pro
+        echo "Qmake finished..."
+        echo "Building project"
+        make
