--- a/.github/workflows/buildQt.yml
+++ b/.github/workflows/buildQt.yml
@@ -23,7 +23,9 @@ jobs:
         echo "changing directory to /home/runner/work/ODA-IDE/ODA-IDE"
         cd "/home/runner/work/ODA-IDE/ODA-IDE"
         echo "Running qmake..."
-        qmake ODA-IDE2.pro
+        which qmake
+        ls -l
+        qmake -qt=qt5 ODA-IDE2.pro
         echo "Qmake finished..."
         echo "Building project"
         make
